--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/goden/react-starter-kit/issues"
   },
-  "homepage": "https://github.com/goden/react-starter-kit#readme"
+  "homepage": "https://github.com/goden/react-starter-kit#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-react": "^3.1.0",
+    "gulp-sourcemaps": "^1.6.0"
+  }
 }
