--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/goden/react-starter-kit#readme",
   "devDependencies": {
+    "browser-sync": "^2.16.1",
     "gulp": "^3.9.1",
     "gulp-react": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0"
