--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/goden/react-starter-kit#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.16.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-react": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0"
   }
