--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-react": "^3.1.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
