--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "browser-sync": "^2.16.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
     "gulp-react": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "react": "^15.3.2",
